--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,8 +20,12 @@ layout: base
      <div class= "usa-grid" align="center">
           <h2>Learning what works (and what doesn't)</h2>
        <p>Based at the General Services Administration (GSA), OES is a team of interdisciplinary experts that works across government to help agencies build and use evidence. To date, OES has completed over 70 randomized evaluations with dozens of agency partners. OES follows the best practices in social science research to build evidence in order to be a leader in transparency and accountability.</p>
-       <br/><center><img src="{{ '/assets/img/icons/build-icon1.png' | prepend: site.baseurl }}" height="300" width="300"><img src="{{ '/assets/img/icons/use-icon.png' | prepend: site.baseurl }}" height="300" width="300"></center>
-  </div>
+       <br/><center><img src="{{ '/assets/img/icons/build-icon3.png' | prepend: site.baseurl }}" height="300" width="300"><img src="{{ '/assets/img/icons/use-icon.png' | prepend: site.baseurl }}" height="300" width="300"></center>
+  <br/><center><p><b>Building Evidence      Using Evidence</center></p></b>
+       <br/><center><p>Apply behavioral insights      Share leading practices</p></center>
+       <br/><center><p>Embed evaluations      Develop resources</center></p>
+    <br/><center><p>Analyze administrative data     Build skills of the Federal workforce</center></p>
+    </div>
 </section>
 {% assign featuredprojects = (site.projects | where: "featured" , "homepage") %}
 {% if featuredprojects.size == 0 %}
