--- a/_layouts/toolkit-dashboard.html
+++ b/_layouts/toolkit-dashboard.html
@@ -9,7 +9,7 @@ layout: base
 </div>
 <section class="usa-section background-tint" style="padding-top: 2rem;">
   <div class="usa-grid" align="center">
-    <p>
+    <p class="tool_link">
       Click here to download the {{ page.title }} workbook.
     </p>
   </div>
