uploaded toolkit icons, new download icon, changed font size, color, & family to match rest of website

--- a/_layouts/toolkit-info.html
+++ b/_layouts/toolkit-info.html
@@ -38,6 +38,8 @@ layout: base
         {% endif %}
       </ul>
     </div>
-    <p class="tool_link">
-      Click here to download the {{ page.title }} workbook.
-    </p>
+    <div class="link_wrapper">
+      <div class="tool_link">
+        Click here to download the {{ page.title }} workbook.
+      </div>
+    </div>
