--- a/_layouts/toolkit-dashboard.html
+++ b/_layouts/toolkit-dashboard.html
@@ -9,7 +9,7 @@ layout: base
 </div>
 <section class="usa-section background-tint" style="padding-top: 2rem;">
   <div class="usa-grid" align="center">
-    <p class="tool_link">
+    <p class="workbook_link">
       Click here to download the {{ page.title }} workbook.
     </p>
   </div>
@@ -19,12 +19,12 @@ layout: base
     <div class="flip-card">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          {{ item.name }}
+          <h2 style="font-size: 25px; display: contents;"> {{ item.name }} </h2>
           <img src="{{ item.image }}" alt="" height="50" width="50">
         </div>
         <a href="{{ site.baseurl}}/learninginfo#{{item.id}}">
           <div class="flip-card-back">
-            {{ item.question }}
+            <h2 style="font-size: 20px;"> {{ item.question }} </h2>
           </div>
         </a>
       </div>
@@ -35,12 +35,12 @@ layout: base
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            {{ item.name }}
+            <h2 style="font-size: 25px; display: contents;"> {{ item.name }} </h2>
             <img src="{{ item.image }}" alt="" height="50" width="50">
           </div>
           <a href="{{ site.baseurl}}/annualinfo#{{item.id}}">
             <div class="flip-card-back">
-              {{ item.question }}
+              <h2 style="font-size: 20px;"> {{ item.question }} </h2>
             </div>
           </a>
         </div>
