--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -9,7 +9,7 @@ layout: base
 </div>
 <section class="usa-section background-tint" style="padding-top: 2rem;">
   <div class="usa-grid">
-    <p>
+    <p class="billboard-message-toolkits">
       The following toolkits were designed for Evaluation Officers and
       related staff to support implementation of Title I of the Evidence Act.
     </p>
@@ -17,27 +17,27 @@ layout: base
   </div>
   <div class="toolkits-div">
     <div class="toolkit-div">
-      <h3><i> Insert Icon </i><h3>
-      <a href="{{ site.baseurl}}/learningagenda/" class="tool-link"> Capacity Assessment Tool </a>
+      <img src="{{ '/assets/img/icons/capacity_icon.jpg' | prepend: site.baseurl }}" height="120" width="120">
+      <h2><a href="{{ site.baseurl}}/learningagenda/" class="tool-link"> Capacity Assessment Tool </a></h2>
     </div>
     <div class="toolkit-div">
-      <h3><i> Insert Icon </i><h3>
-      <a href="{{ site.baseurl}}/learningagenda/" class="tool-link"> Learning Agenda Toolkit </a>
+      <img src="{{ '/assets/img/icons/learning_icon.jpg' | prepend: site.baseurl }}" height="120" width="120">
+      <h2><a href="{{ site.baseurl}}/learningagenda/" class="tool-link"> Learning Agenda Toolkit </a></h2>
     </div>
     <div class="toolkit-div">
-      <h3><i> Insert Icon </i><h3>
-      <a href="{{ site.baseurl}}/annualevaluation/" class="tool-link"> Annual Evaluation Plan Toolkit </a>
+      <img src="{{ '/assets/img/icons/annual_icon.jpg' | prepend: site.baseurl }}" height="120" width="120">
+      <h2><a href="{{ site.baseurl}}/annualevaluation/" class="tool-link"> Annual Evaluation Plan Toolkit </a></h2>
     </div>
   </div>
   <hr/>
   <table class="download-footer" style="border: none;">
     <tr class="table-border">
-      <td class="table-border"><b> Downloads <b/></td>
+      <td class="table-border" style="color: #2E9AC4; font-size: 20px;"><b> Downloads <b/></td>
       <td class="table-border"> Evidence Act: Title I Overview </td>
       <td class="table-border"> Quick Reference Sheet </td>
     </tr>
     <tr>
-      <td style="padding-left: 43px;"><img src="{{ '/assets/img/icons/download.png' | prepend: site.baseurl }}" height="50" width="50"> </img></td>
+      <td style="padding-left: 0px;"><img src="{{ '/assets/img/icons/download.jpg' | prepend: site.baseurl }}" height="100" width="150"> </img></td>
       <td class="table-border"> Learning Agenda and Annual Evaluation Plan Master Checklist </td>
       <td class="table-border"> Engaging Sub-agencies in Title I implementation </td>
     </tr>
