--- a/_sass/components/toolkits.scss
+++ b/_sass/components/toolkits.scss
@@ -5,16 +5,30 @@
 }
 
 .toolkit-div {
-  // border: 1px solid #2E9AC4;
   margin: 10px;
   padding: 10px;
   padding-top: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
+}
+
+.billboard-message-toolkits {
+  color: #81848B;
+  font-family: "Lato", "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
+  font-size: 28px;
+  font-weight: 700;
+  letter-spacing: -0.4px;
+  line-height: 1.3;
+  margin: 0 auto;
 }
 
 .download-footer {
   border: none;
   border-style: hidden!important;
+  font-family: "Lato", "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
+  font-size: 18px;
 }
 
 td {
@@ -31,11 +45,11 @@ table {
 
 .tool-link {
   text-decoration: none;
-  color: #0071bc;
+  color: #2E9AC4;
 }
 
 .tool-link:visited {
-  color: #0071bc;
+  color: #2E9AC4;
 }
 
 .wrapper-div {
@@ -53,12 +67,13 @@ table {
   perspective: 1000px;
   margin: 10px;
   flex: 0 0 24%;
+  font-family: "Lato", "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
 }
 
 .flip-card-inner {
   position: relative;
   width: 100%;
-  height: 125px;
+  height: 150px;
   text-align: center;
   transition: transform 0.6s;
   transform-style: preserve-3d;
@@ -79,6 +94,7 @@ table {
   background-color: #2E9AC4;
   border-radius: 10px;
   padding: 25px;
+  padding-top: 18px;
   color: white;
   display: flex;
   justify-content: space-around;
@@ -93,8 +109,14 @@ table {
   display: flex;
   align-items: center;
   padding: 10px;
+  padding-bottom: 20px;
+  font-family: "Lato", "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
 }
 
+.card-contents {
+  font-size: 25px;
+  display: contents;
+}
 //toolkit-info Styling
 
 .nav {
@@ -181,8 +203,28 @@ li {
   display: none;
 }
 
+.link_wrapper {
+  display: flex;
+  justify-content: flex-end;
+  position: sticky;
+}
+
 .tool_link {
+  border-radius: 10px;
+  height: 300px;
+  width: 200px;
+  padding-top: 9%;
+  background-color: #81848B;
+  color: white;
+  font-family: "Lato", "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
+  font-size: 21px;
+  font-weight: 400;
+}
+
+.workbook_link {
   color: #81848B;
+  font-family: "Lato", "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
+  font-size: 21px;
+  font-weight: 700;
   text-decoration: underline;
-  font-weight: 600;
 }
