made styling changes and added pdf documnets for download link on toolkit home page

--- a/_layouts/toolkit-dashboard.html
+++ b/_layouts/toolkit-dashboard.html
@@ -10,11 +10,11 @@ layout: base
 <section class="usa-section background-tint" style="padding-top: 2rem;">
   <div class="usa-grid" align="center">
     <p class="workbook_link">
-      Click here to download the {{ page.title }} workbook.
+      Click here to download the {{ page.title }} Workbook.
     </p>
   </div>
   <div class="wrapper-div">
-  {% if page.title == "Learning Agenda Toolkit Home Page" %}
+  {% if page.title == "Learning Agenda Toolkit" %}
     {% for item in site.data.learningagenda %}
     <div class="flip-card">
       <div class="flip-card-inner">
