--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -10,8 +10,8 @@ layout: base
 <section class="usa-section background-tint" style="padding-top: 2rem;">
   <div class="usa-grid">
     <p class="billboard-message-toolkits">
-      The following toolkits were designed for Evaluation Officers and
-      related staff to support implementation of Title I of the Evidence Act.
+  The following resources are designed for Evaluation Officers and related staff
+  to support implementation of the Evidence Act.
     </p>
   <div align="center">
   </div>
@@ -33,13 +33,13 @@ layout: base
   <table class="download-footer" style="border: none;">
     <tr class="table-border">
       <td class="table-border" style="color: #2E9AC4; font-size: 20px;"><b> Downloads <b/></td>
-      <td class="table-border"> Evidence Act: Title I Overview </td>
-      <td class="table-border"> Quick Reference Sheet </td>
+      <td class="table-border" style="text-decoration: underline;"> <a href="{{ page.download-one | prepend: site.baseurl }}"> Evidence Act: Phase I Overview </a></td>
+      <td class="table-border" style="text-decoration: underline;"> <a href="{{ page.download-two | prepend: site.baseurl }}"> Quick Reference Sheet </a></td>
     </tr>
     <tr>
       <td style="padding-left: 0px;"><img src="{{ '/assets/img/icons/download.jpg' | prepend: site.baseurl }}" height="100" width="150"> </img></td>
-      <td class="table-border"> Learning Agenda and Annual Evaluation Plan Master Checklist </td>
-      <td class="table-border"> Engaging Sub-agencies in Title I implementation </td>
+      <td class="table-border" > Master Checklist: Learning Agenda and Annual Evaluation Plan Toolkits </td>
+      <td class="table-border"> Engaging Sub-agencies in Evidence Act Implementation </td>
     </tr>
   </table>
 </section>
