--- a/_sass/components/toolkits.scss
+++ b/_sass/components/toolkits.scss
@@ -256,6 +256,7 @@ a:visited {
   flex-direction: row;
   justify-content: space-between;
   text-align: left;
+  font-family: "Lato", "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
 }
 
 p {
