completed all sections for the annual agenda

--- a/_includes/toolkit_sections/section_one.html
+++ b/_includes/toolkit_sections/section_one.html
@@ -35,7 +35,7 @@
       agency functioning.</p>
     </div>
   </div>
-  <h2 style="text-align: left;"> <b> Benefits of a Learning Agenda </b> </h2>
+  <p style="text-align: left;"> <b> Benefits of a Learning Agenda </b> </p>
   <p style="text-align: left;"> Learning agendas can have many benefits for agencies. Specifically, the plans can beused to: </p>
   <p style="text-align: right; margin-right: 100px;"><b> Example Actions </b> </p>
     <div class="contents_wrapper">
